fix: ensure embedded PostgreSQL is cleaned up on crash or forced termination (Fix #12844)
* Used Path.of() instead of Paths.get() in PostgreProcessCleaner.